# panel-chat

./: .cursorrules  .dockerignore  .env.example  .gitignore  README.md  docker-compose.yml  hello.py  pyproject.toml
.claude/: settings.local.json
backend/: Dockerfile  config.py  db.py  main.py
backend/graph/: builder.py  nodes.py  prompts.py  state.py
backend/models/: chat.py  respondent.py  survey.py  ws.py
backend/routers/: debates.py  respondents.py  surveys.py  ws.py
backend/services/: analyzer.py  history.py  llm.py  panel.py
docs/: api.md  architecture.md  configuration.md  development.md
frontend/: Dockerfile  nginx.conf  package-lock.json  package.json
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/api/: client.ts  ws.ts
frontend/src/components/: AgentCard.tsx  BreakdownEditor.tsx  ChatInput.tsx  CostBadge.tsx  DebateAnalysisView.tsx  DebateTranscript.tsx  DebateView.tsx  FilterPanel.tsx  Layout.tsx  PanelProgress.tsx  PersonaDetail.tsx  PersonaRadar.tsx  ResponseCard.tsx  ResultsView.tsx  RoundView.tsx  SettingsModal.tsx  SettingsPanel.tsx  Sidebar.tsx  SubQuestionChart.tsx  SurveyView.tsx
frontend/src/components/ui/: tabs.tsx
frontend/src/hooks/: useDebate.ts  useSurvey.ts
frontend/src/lib/: avatar.ts  chartThemes.ts  personaTraits.ts  pricing.ts  theme.tsx
frontend/src/store/: debateStore.ts  surveyStore.ts
frontend/src/types/: index.ts
